kubernetes/overlays/prod/ondemand-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ondemand
spec:
  replicas: 5
  template:
    spec:
      affinity:
        podAntiAffinity:
                  requiredDuringSchedulingIgnoredDuringExecution:
                  - labelSelector:
                      matchExpressions:
                      - key: app
                        operator: In
                        values:
                        - ondemand
                    topologyKey: kubernetes.io/hostname
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: "edu.stanford.slac.sdf.slurm"
                operator: In
                values:
                - "true"
              #- key: "feature.node.kubernetes.io/system-os_release.ID"
              #  operator: In
              #  values:
              #  - "rocky"
              - key: "feature.node.kubernetes.io/system-os_release.VERSION_ID.major"
                operator: In
                values:
                - "9"
      containers:
      - name: ondemand
        imagePullPolicy: Always
        # command: [ "bash", "-c", "sleep infinity" ]
        volumeMounts:
        # source code overrides
#        - name: ood-config-nginx-stage
#          mountPath: /etc/ood/config/nginx_stage.yml
#          subPath: nginx_stage.yml
        - name: linuxhost-adapter-src
          mountPath: /opt/ood/ondemand/root/usr/share/gems/3.1/ondemand/3.1.11-1/gems/ood_core-0.25.0/lib/ood_core/job/adapters/linux_host/launcher.rb
          subPath: launcher.rb
        - name: linuxhost-adapter-src
          mountPath: /opt/ood/ondemand/root/usr/share/gems/3.1/ondemand/3.1.11-1/gems/ood_core-0.25.0/lib/ood_core/job/adapters/linux_host/templates/script_wrapper.erb.sh
          subPath: script_wrapper.erb.sh
        # ssh config
        - name: ssh-config
          mountPath: /etc/ssh/ssh_config.d/01-s3df.conf
          subPath: 01-s3df.conf
        - name: shell-app-src
          mountPath: /var/www/ood/apps/sys/shell/app.js
          subPath: app.js
        - name: batch-connect-app-vnc-src
          mountPath: /opt/ood/ondemand/root/usr/share/gems/3.1/ondemand/3.1.11-1/gems/ood_core-0.25.0/lib/ood_core/batch_connect/templates/vnc.rb
          subPath: vnc.rb
        # general filesystems
        - name: sdf
          mountPath: /sdf/
        # support infra sw
        - name: slurm
          mountPath: /opt/slurm/
          readOnly: true
        # apps
        - name: ood-desktop-config
          mountPath: /etc/ood/config/apps/bc_desktop/
          readOnly: true
        - name: slac-ood-desktop
          mountPath: /var/www/ood/apps/sys/bc_desktop
        #- name: slac-ood-matlab
        #  mountPath: /var/www/ood/apps/sys/slac-ood-matlab
        # logs
        - name: dashboard-log
          mountPath: /var/www/ood/apps/sys/dashboard/log
        - name: activejobs-log
          mountPath: /var/www/ood/apps/sys/activejobs/log
        - name: pun-log
          mountPath: /var/log/ondemand-nginx/
        # apps
        - name: slac-ood-jupyter
          mountPath: /var/www/ood/apps/sys/slac-ood-jupyter/
          readOnly: true
        - name: slac-ood-cryosparc
          mountPath: /var/www/ood/apps/sys/slac-ood-cryosparc/
          readOnly: true
        - name: slac-ood-claude-code
          mountPath: /var/www/ood/apps/sys/bc_claude_code/
          readOnly: true
        - name: slac-ood-opencode
          mountPath: /var/www/ood/apps/sys/bc_opencode/
          readOnly: true
        # customisation
        - name: motd
          mountPath: /etc/motd
          subPath: motd
          readOnly: true
        - name: pun-html
          mountPath: /etc/ood/config/pun/html/
          readOnly: true
        - name: pun-html
          mountPath: /etc/ood/config/apps/dashboard/env
          subPath: pun.env
          readOnly: true
      - name: slac-ood-jupyter
        image: slaclab/gitclone
        #command: ["/bin/sh","-c","sleep infinity"]
        resources:
          limits:
            ephemeral-storage: 5Gi
          requests:
            ephemeral-storage: 5Gi
        volumeMounts:
        - mountPath: /app
          name: slac-ood-jupyter
      - name: slac-ood-desktop
        image: slaclab/gitclone
        #command: ["/bin/sh","-c","sleep infinity"]
        resources:
          limits:
            ephemeral-storage: 100Mi
          requests:
            ephemeral-storage: 100Mi
        volumeMounts:
        - mountPath: /app
          name: slac-ood-desktop
      - name: slac-ood-cryosparc
        image: slaclab/gitclone
        #command: ["/bin/sh","-c","sleep infinity"]
        resources:
          limits:
            ephemeral-storage: 100Mi
          requests:
            ephemeral-storage: 100Mi
        volumeMounts:
        - mountPath: /app
          name: slac-ood-cryosparc
      - name: slac-ood-claude-code
        image: slaclab/gitclone
        resources:
          limits:
            ephemeral-storage: 100Mi
          requests:
            ephemeral-storage: 100Mi
        volumeMounts:
        - mountPath: /app
          name: slac-ood-claude-code
      - name: slac-ood-opencode
        image: slaclab/gitclone
        resources:
          limits:
            ephemeral-storage: 100Mi
          requests:
            ephemeral-storage: 100Mi
        volumeMounts:
        - mountPath: /app
          name: slac-ood-opencode
      volumes:
      - name: ood-config-nginx-stage
        configMap:
          name: ood-config
          items:
          - key: nginx_stage.yml
            path: nginx_stage.yml
      - name: linuxhost-adapter-src
        configMap:
          name: linuxhost-adapter-src
      - name: shell-app-src
        configMap:
          name: shell-app-src
      - name: batch-connect-app-vnc-src
        configMap:
          name: batch-connect-app-vnc-src
      - name: ssh-config
        configMap:
          name: ssh-config
          defaultMode: 0644
      - name: slac-ood-jupyter
        emptyDir: {}
      - name: slac-ood-cryosparc
        emptyDir: {}
      - name: slac-ood-desktop
        emptyDir: {}
      - name: slac-ood-claude-code
        emptyDir: {}
      - name: slac-ood-opencode
        emptyDir: {}
      - name: motd
        configMap:
          name: motd
          items:
          - key: motd
            path: motd
      - name: ood-clusterd-config
        configMap:
          name: ood-clusters
      # general filesystems
      # kinda nasty....
      - name: sdf
        hostPath:
          path: /sdf/
      - name: fs
        hostPath:
          path: /fs/
      # support infra sw
      - name: munge-socket
        hostPath:
          path: /var/run/munge
      - name: slurm
        hostPath:
          path: /opt/slurm
      - name: slurm-config
        hostPath:
          path: /run/slurm/conf/
      # ood apps
      - name: ood-desktop-config
        configMap:
          name: ood-config
          items:
          - key: s3df_desktop.yml
            path: s3df.yml
      #- name: slac-ood-matlab
      #  hostPath:
      #    path: /tmp/sdf/sw/ood/dev/apps/sys/slac-ood-matlab/
      #    type: Directory
      #- name: slac-ood-cryosparc
      #  hostPath:
      #    path: /tmp/sdf/sw/ood/dev/apps/sys/slac-ood-cryosparc/
      #    type: Directory
      # logs
      - name: pun-log
        persistentVolumeClaim:
          claimName: pun-log
      - name: dashboard-log
        persistentVolumeClaim:
          claimName: dashboard-log
      - name: activejobs-log
        persistentVolumeClaim:
          claimName: activejobs-log
