kubernetes/overlays/prod/ingress-patch.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ondemand
  namespace: ondemand-dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  rules:
  - host: sdf.slac.stanford.edu
    http:
      paths:
      - backend:
          serviceName: ondemand
          servicePort: 443
        path: /
