kubernetes/overlays/prod/ingress.yaml
#
# # - NOTE 2024-09-10 this / ingress moved to sdf-docs/kubernetes/overlays/prod/ingress.yml to separate docs into sdf-docs cluster
# # 
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: ondemand-unauth
##  annotations:
##    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30s"
##    nginx.ingress.kubernetes.io/proxy-read-timeout: "20s"
##    nginx.ingress.kubernetes.io/client-max-body-size: "50m"
##    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
#spec:
#  rules:
#  - host: s3df.slac.stanford.edu
#    http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: ondemand
#            port:
#              number: 80 
#
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ondemand
  annotations:
    # sticky sessions for multiple replica deployments
    nginx.ingress.kubernetes.io/session-cookie-name: "session-route"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent

    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "20s"
    nginx.ingress.kubernetes.io/client-max-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/auth-signin: "https://vouch.slac.stanford.edu/login?url=$scheme://$http_host$request_uri&vouch-failcount=$auth_resp_failcount&X-Vouch-Token=$auth_resp_jwt&error=$auth_resp_err"
    nginx.ingress.kubernetes.io/auth-url: https://vouch.slac.stanford.edu/validate
    nginx.ingress.kubernetes.io/auth-response-headers: 'X-Vouch-User, X-Vouch-Idp-Claims-Name, X-Vouch-IdP-AccessToken, X-Vouch-IdP-RefreshToken, X-Vouch-IdP-IdToken, X-Vouch-Token'
    nginx.ingress.kubernetes.io/auth-snippet: |
      auth_request_set $auth_resp_jwt $upstream_http_x_vouch_IdToken;
      auth_request_set $auth_resp_err $upstream_http_x_vouch_err;
      auth_request_set $auth_resp_failcount $upstream_http_x_vouch_failcount;
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Remote-Name $http_x_vouch_idp_claims_name;
      proxy_set_header Remote-User $http_x_vouch_idp_claims_name;
spec:
  rules:
  - host: s3df.slac.stanford.edu
    http:
      paths:
      - path: /pun/
        pathType: Prefix
        backend:
          service:
            name: ondemand
            port:
              number: 80 
      - path: /node/
        pathType: Prefix
        backend:
          service:
            name: ondemand
            port:
              number: 80
      - path: /rnode/
        pathType: Prefix
        backend:
          service:
            name: ondemand
            port:
              number: 80
      - path: /nginx/
        pathType: Prefix
        backend:
          service:
            name: ondemand
            port:
              number: 80 
      - path: /logout
        pathType: Prefix
        backend:
          service:
            name: ondemand
            port:
              number: 80 

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ondemand-path-redirect
  annotations:
    nginx.ingress.kubernetes.io/temporal-redirect: https://s3df.slac.stanford.edu/pun/sys/dashboard
spec:
  rules:
  - host: s3df.slac.stanford.edu
    http:
      paths:
      - path: /ondemand
        pathType: Prefix
        backend:
          service:
            name: ondemand
            port:
              number: 80
